--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_00"
-author: "Your Name here"
-date: "Year 2020"
+author: "Fernando D velasquez Perdomo"
+date: "January 28,2021"
 output: html_document
 ---
 
@@ -15,6 +15,13 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+
+How doth the little crocodile  
+     Improve his shining tail,   
+And pour the waters of the Nile   
+     On every golden scale!   
+  
+How cheerfully he seems to grin,   
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
